<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>az_body_tracker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kdh4970@gmail.com">do</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>K4A</depend>
  <depend>K4Abt</depend>
  <depend>Eigen3</depend>
  <build_depend>azbt_msgs</build_depend>
  <depend>azure_kinect_ros_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
